--- a/frontend/blog-cms/src/components/common/Navbar/styles.scss
+++ b/frontend/blog-cms/src/components/common/Navbar/styles.scss
@@ -11,7 +11,7 @@
 
 .container {
     background-color: #FFFFFF;
-    padding: 1rem;
+    padding: 1rem 2.5rem;
     height: 4rem;
     display: flex;
     justify-content: space-between;
