--- a/frontend/blog-cms/src/components/users/ProfilePostsBody/styles.scss
+++ b/frontend/blog-cms/src/components/users/ProfilePostsBody/styles.scss
@@ -11,8 +11,8 @@
     width: 100%;
     height: 220px;
     object-fit: cover;
-    border-top-right-radius: 0.75rem;
-    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .homePageFeedPosts {
@@ -23,6 +23,8 @@
     background-color: white;
     border-radius: 12px;
     font-family: Arial, Helvetica, sans-serif;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .postStats {
