--- a/frontend/blog-cms/src/pages/Home/styles.scss
+++ b/frontend/blog-cms/src/pages/Home/styles.scss
@@ -9,12 +9,15 @@
     gap: 1.5rem;
     padding: 2rem;
     background-color: white;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 
 .homePageLayout {
     display: grid;
     grid-template-columns: 9fr 3fr;
+    //gap: 1rem;
 }
 
 .hallOfFameSection {
@@ -22,8 +25,11 @@
     flex-direction: column;
     gap: 1.5rem;
     padding: 2rem;
-    padding-left: 0;
     background-color: white;
+    border-radius: 0.75rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding-left: 0;
 }
 
 a {
